Integrate Golestan scraper, enable JSON startup load, and add major-based filtering
Connect Golestan scraper and captcha solver to main application
Automatically load Golestan JSON data files from app/courses_data/ on startup if present
Parse and display scraped course data in the Course List (including capacity, gender_restriction, location, enrollment_conditions)
Add dynamic “انتخاب رشته” dropdown and categorize courses by major
Preserve global search functionality so searches run across all courses regardless of selected major

--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,6 +1,15 @@
 # Core PyQt5 requirements (already installed)
 PyQt5>=5.15.0
 
+# Web scraping requirements
+requests>=2.28.0
+beautifulsoup4>=4.11.0
+python-dotenv>=0.21.0
+
+# Captcha solving requirements
+tensorflow>=2.10.0
+numpy>=1.21.0
+
 # Optional: Additional fonts for better Persian support
 # Install system fonts like Tahoma, B Nazanin, etc. manually if needed
 
