--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ app/user_data.json
 app/courses_data.json
 
 *.log
+
+app/courses_data/
+
+app/scrapers/__pycache__/
+
+app/scrapers/requests_scraper/__pycache__/
