--- a/app/scrapers/.env
+++ b/app/scrapers/.env
@@ -1,2 +1,4 @@
-USERNAME=your_student_id
-PASSWORD='your_password'
+# Golestan System Credentials
+# Replace these with your actual Golestan username and password
+USERNAME=your_actual_golestan_username_here
+PASSWORD=your_actual_golestan_password_here
