Refactored Application Structure - Clean Architecture and Production Standards
This commit includes a complete refactoring of the Schedule Planner application structure according to clean architecture and enterprise-level Python standards.

# Key Improvements:
• Reorganized files into logical packages (core, ui, data, assets, translations)
• Moved data files to dedicated data/ directory with organized backups
• Created proper packages with __init__.py files and documentation
• Updated import paths with proper module conventions
• Centralized configuration management with environment variable support
• Centralized logging with file rotation and error handling
• MVC-like structure with clear separation of concerns
• Maintained backward compatibility with all existing functionality

# Final Structure:
app/
├── core/           # Business logic and core functionality
├── ui/             # User interface components
├── data/           # Data files and backups
├── assets/         # Image assets and fonts
├── translations/   # Translation files
├── scrapers/       # Web scraping modules
└── captcha_solver/ # CAPTCHA solving functionality

🔧 Key Files:
• core/config.py - Centralized configuration management
• core/data_manager.py - Data loading and saving utilities
• core/logger.py - Centralized logging configuration
• core/error_handler.py - Global error handling

# Benefits Achieved:
• Maintainability with clear separation of concerns
• Scalability with modular design
• Testability with well-defined interfaces
• Better collaboration with clear structure
• Proper documentation with comprehensive docstrings
• Centralized configuration with environment variables

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,23 @@ app/scrapers/__pycache__/
 app/scrapers/requests_scraper/__pycache__/
 
 app/captcha_solver/__pycache__/
+
+app/assets/__pycache__/
+
+app/core/__pycache__/
+
+app/data/backups/
+
+app/ui/__pycache__/
+
+app/scrapers/selenium_scraper/__pycache__/
+
+app/data/__pycache__/
+
+app/data/courses_data/available_courses.json
+
+app/data/courses_data/unavailable_courses.json
+
+*.backup
+
+app/data/user_data.json
