🔄 Project Rename: Chupolovski → Golestoon
- Renamed all instances of 'Chupolovski' to 'Golestoon' across codebase
- Updated docstrings, window titles, and package references
- Adjusted logger name and imports
- Verified all imports, data paths, and UI modules
- Ensured application runs successfully under the new name 'Golestoon Class Planner'

Notes:
- Preserved logic and structure (no functional changes)
- UI and backup behavior remain intact
- Window titles now correctly display "Golestoon Class Planner"
- Logger module updated to use 'golestoon' as the logger name
- All package docstrings updated to reference "Golestoon Class Planner"
- Version information updated to 0.7.0
- README.md fully updated with new project name and branding

--- a/app/.env.example
+++ b/app/.env.example
@@ -1,4 +1,4 @@
-# Environment configuration for Chupolovski Class Planner
+# Environment configuration for Golestoon Class Planner
 
 # Golestan System Credentials
 USERNAME=your_golestan_username
