feat: Implement automatic Golestan data fetching with credentials management
• Added automatic Golestan data fetching capability with user credential management
• Implemented secure local storage for Golestan credentials with encryption
• Created user-friendly dialogs for credential input with proper validation
• Added menu options for managing saved credentials:
• Implemented proper RTL layout support for all Persian UI elements
• Added input validation for student numbers
• Fixed duplicate dialog issue by ensuring signals are connected only once
• Implemented real-time UI refresh after successful data fetch

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,8 @@ app/output.txt
 *.patch
 
 app/data/user_added_courses.json
+
+# Local credentials file (gitignored for security)
+app/data/local_credentials.json
+
+app/data/courses_data.json
