--- a/app/.env.example
+++ b/app/.env.example
@@ -1,6 +1,7 @@
 # Environment configuration for Golestoon Class Planner
 
 # Golestan System Credentials
+# Do NOT commit real credentials. Use .env.local or the app UI.
 USERNAME=your_golestan_username
 PASSWORD=your_golestan_password
 
