--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,6 @@ app/data/user_added_courses.json
 app/data/local_credentials.json
 
 app/data/courses_data.json
+ 
+# gitignored .db file.
+app/data/golestan_courses.db
